# git-talk-impls

./: test
cpp/: CMakeLists.txt  checkouttree.cpp  printobject.cpp  writeblob.cpp  writecommit.cpp  writeobject.cpp  writeobject.h  writetree.cpp
py/: checkouttree  printobject  printrawobject  writeblob  writecommit  writeindex  writetree
